@@ -16,6 +16,7 @@
 package org.openrewrite.groovy.tree;
 
 import org.junit.jupiter.api.Test;
+import org.openrewrite.Issue;
 import org.openrewrite.java.tree.J;
 import org.openrewrite.java.tree.JavaType;
 import org.openrewrite.java.tree.TypeUtils;
@@ -196,7 +197,8 @@ class LiteralTest implements RewriteTest {
           groovy(
                 """
             "$System.env.BAR_BAZ"
-            """)
+            """
+          )
         );
     }
 
@@ -206,7 +208,8 @@ class LiteralTest implements RewriteTest {
           groovy(
                 """
             "${}"
-            """)
+            """
+          )
         );
     }
 
@@ -216,7 +219,8 @@ class LiteralTest implements RewriteTest {
           groovy(
                 """
             " ${ " ${ " " } " } "
-            """)
+            """
+          )
         );
     }
 
@@ -226,7 +230,8 @@ class LiteralTest implements RewriteTest {
           groovy(
                 """
             " ${""}\\n${" "} "
-            """)
+            """
+          )
         );
     }
 
@@ -309,8 +314,8 @@ class LiteralTest implements RewriteTest {
                 // Groovy AST represents 1.8 as a BigDecimal
                 // Java AST would represent it as Double
                 // Our AST could reasonably make either choice
-                var initializer = requireNonNull((J.Literal) ((J.VariableDeclarations) cu.getStatements().get(0))
-                  .getVariables().get(0).getInitializer());
+                var initializer = requireNonNull((J.Literal) ((J.VariableDeclarations) cu.getStatements().getFirst())
+                  .getVariables().getFirst().getInitializer());
                 if (initializer.getType() == JavaType.Primitive.Double) {
                     assertThat(initializer.getValue()).isEqualTo(1.8);
                 } else if (TypeUtils.isOfClassType(initializer.getType(), "java.math.BigDecimal")) {
@@ -400,6 +405,20 @@ class LiteralTest implements RewriteTest {
           groovy(
             """
               from(":-)").via(''':-|(''').via(":-)").to(':-(')
+              """
+          )
+        );
+    }
+
+
+    @Test
+    @Issue("https://github.com/openrewrite/rewrite/issues/5232")
+    void stringWithMultipleBackslashes() {
+        rewriteRun(
+          groovy(
+            """
+              "".replaceAll('\\\\', '/')
+              "a\\b".replaceAll('\\\\', '/')
               """
           )
         );
