@@ -15,8 +15,6 @@
  */
 package org.openrewrite.yaml;
 
-import java.util.List;
-import java.util.stream.Stream;
 import org.intellij.lang.annotations.Language;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -26,6 +24,9 @@ import org.openrewrite.SourceFile;
 import org.openrewrite.test.RewriteTest;
 import org.openrewrite.tree.ParseError;
 import org.openrewrite.yaml.tree.Yaml;
+
+import java.util.List;
+import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -38,15 +39,15 @@ class YamlParserTest implements RewriteTest {
         List<SourceFile> yamlSources = YamlParser.builder().build().parse("a: b\n").toList();
         assertThat(yamlSources).singleElement().isInstanceOf(Yaml.Documents.class);
 
-        Yaml.Documents documents = (Yaml.Documents) yamlSources.get(0);
-        Yaml.Document document = documents.getDocuments().get(0);
+        Yaml.Documents documents = (Yaml.Documents) yamlSources.getFirst();
+        Yaml.Document document = documents.getDocuments().getFirst();
 
         // Assert that end is parsed correctly
         assertThat(document.getEnd().getPrefix()).isEqualTo("\n");
 
         // Assert that the title is parsed correctly
         Yaml.Mapping mapping = (Yaml.Mapping) document.getBlock();
-        Yaml.Mapping.Entry entry = mapping.getEntries().get(0);
+        Yaml.Mapping.Entry entry = mapping.getEntries().getFirst();
         Yaml.Scalar title = (Yaml.Scalar) entry.getValue();
         assertThat(title.getValue()).isEqualTo("b");
     }
@@ -121,11 +122,11 @@ class YamlParserTest implements RewriteTest {
         assertThat(sourceFile).isNotInstanceOf(ParseError.class);
 
         Yaml.Documents documents = (Yaml.Documents) sourceFile;
-        Yaml.Document document = documents.getDocuments().get(0);
+        Yaml.Document document = documents.getDocuments().getFirst();
 
         // Assert that end is parsed correctly
         Yaml.Mapping mapping = (Yaml.Mapping) document.getBlock();
-        Yaml.Mapping.Entry entry = mapping.getEntries().get(0);
+        Yaml.Mapping.Entry entry = mapping.getEntries().getFirst();
         Yaml.Scalar title = (Yaml.Scalar) entry.getValue();
         assertThat(title.getValue()).isEqualTo(input.trim());
     }
@@ -255,8 +256,8 @@ class YamlParserTest implements RewriteTest {
             """
           )
         );
-    }  
-  
+    }
+
     @Test
     void tagsAsInCloudFormation() {
         rewriteRun(
@@ -310,12 +311,12 @@ class YamlParserTest implements RewriteTest {
           """;
 
         // when
-        Yaml.Documents parsed = (Yaml.Documents) YamlParser.builder().build().parse(code).toList().get(0);
+        Yaml.Documents parsed = (Yaml.Documents) YamlParser.builder().build().parse(code).toList().getFirst();
 
         // test
-        Yaml.Document document = parsed.getDocuments().get(0);
+        Yaml.Document document = parsed.getDocuments().getFirst();
         Yaml.Mapping topMapping = (Yaml.Mapping) document.getBlock();
-        Yaml.Mapping.Entry person = topMapping.getEntries().get(0);
+        Yaml.Mapping.Entry person = topMapping.getEntries().getFirst();
         assertEquals("person", person.getKey().getValue());
         Yaml.Mapping withinPerson = (Yaml.Mapping) person.getValue();
         assertEquals("map", withinPerson.getTag().getName());
@@ -337,6 +338,75 @@ class YamlParserTest implements RewriteTest {
           // thus proving the parser can handle a flow-style sequence ending at the boundary of the internal buffer used by SnakeYaml StreamReader.
           spec -> spec.recipe(new DeleteKey(".nonexistent","*")),
           yaml(yaml)
+        );
+    }
+
+    @Test
+    void withUnicodeCharacters() {
+        rewriteRun(
+          yaml(
+            """
+            - name: Elephant
+            - #🦍COMMENT: unicode
+            - action: Do something
+            """
+          )
+        );
+    }
+
+    @Test
+    void withUnicodeCharactersInSingleLine() {
+        rewriteRun(
+          yaml(
+            """
+            - name: Elephant
+            - #🦍COMMENT: 🐶unicode
+            - action: Do something
+            """
+          )
+        );
+    }
+
+    @Test
+    void withoutUnicodeCharacters() {
+        rewriteRun(
+          yaml(
+            """
+            - name: Elephant
+            - #COMMENT: unicode
+            - action: Do something
+            """
+          )
+        );
+    }
+
+    @Test
+    void withMultipleUnicodeCharacters() {
+        rewriteRun(
+          yaml(
+            """
+            - name: Rat
+            - #🐀COMMENT: unicode
+            - color: Black
+            - #🦍COMMENT: unicode
+            - action: Escape
+            """
+          )
+        );
+    }
+
+    @Test
+    void withMultipleUnicodeCharactersPerLine() {
+        rewriteRun(
+          yaml(
+            """
+            - name: Rat
+            - #🐀COMMENT: 🦍unicode
+            - color: Black
+            - #🦍COMMENT: 🎱unicode
+            - action: Escape
+            """
+          )
         );
     }
 }
